Fixed flex column wrap

--- a/src/styles/blocks/common/_flex.scss
+++ b/src/styles/blocks/common/_flex.scss
@@ -55,6 +55,7 @@ $flexClass: ".flex";
 
       &--#{$size}-direction-column {
         flex-direction: column;
+        flex-wrap: nowrap;
       }
     }
   }
